# computer.graphics.prac1

./: .gitignore  CMakeLists.txt
include/prac01/: curve.h  parse.h  surf.h
src/: camera.cpp  curve.cpp  main.cpp  parse.cpp  surf.cpp
